js/widgets/site/Lightsquare/_HomePage/_ChallengeGraph/challenge_graph.css
div.challenge_graph {
	display: flex;
}

div.ratings {
	color: #3f3f3f;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	padding: .3em .3em 1.3em 0;
}

div.ratings > div {
	font-size: .8em;
	text-align: right;
}

div.challenge_graph_body {
	flex-grow: 1;
	border: 1px solid #ababab;
	background: white;
}

div.challenge_graph_body > div {
	position: relative;
}

div.challenge_graph_challenges {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	width: 100%;
}

div.time_lines {
	display: flex;
}

div.time_lines > div {
	box-sizing: border-box;
	border-right: 1px solid #E2E2E2;
}

div.time_lines > div:last-child {
	border-right: 0;
}

div.no_challenges_message {
	display: flex;
	justify-content: space-around;
	align-items: center;
}

div.no_challenges_message > div {
	font-size: 1.2em;
	text-align: center;
	color: #ababab;
	padding: 1em;
	background: white;
}

div.challenge {
	display: flex;
	align-items: center;
	flex-shrink: 0;
	position: relative;
	z-index: 1;
	box-sizing: border-box;
	width: 10%;
	min-width: 5em;
	border: 1px solid #cfcfcf;
	padding: .3em .5em;
	box-shadow: 1px 2px 2px rgba(0, 0, 0, .3);
	cursor: pointer;
}

div.challenge.current_challenge {
	cursor: default;
}

div.challenge.not_current_challenge,
div.challenge.current_challenge,
div.challenge.current_challenge:hover
{
	background: #efefef;
}

div.challenge.not_current_challenge:hover,
div.challenge.current_challenge:hover {
	z-index: 2;
}

div.challenge.not_current_challenge:hover {
	border-color: #202020;
	background: #5E5E5E;
}

div.challenge.not_current_challenge:hover > div.challenge_label > div.challenge_owner {
	color: #E5E5E5;
}

div.challenge.not_current_challenge:hover > div.challenge_label > div.challenge_time {
	color: white;
}

div.body_and_time_brackets {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

div.challenge_label {
	font-size: .8em;
	text-align: center;
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

div.challenge_owner {
	color: #606060;
}

div.challenge_time {
	font-size: 1.2em;
}

div.time_brackets {
	display: flex;
	height: 1em;
}

div.time_brackets > div {
	font-size: .8em;
	text-align: center;
	width: 20%;
	margin-top: .3em;
}

